--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Tasks</h1>
     <a href="./task1.html">Task 1</a>
     <a href="./task2.html">Task 2</a>
+    <a href="./task3.html">Task 3</a>
 </body>
 </html>
