added cart with dynamic html

--- a/html/task1.html
+++ b/html/task1.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech-task</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Task 1</h1>
     <img class="images" style="top:50px;" data-name="0" src="./images/img1.jpg" alt="">
     <img class="images" style="top:50px;" data-name="1" src="./images/img2.jpg" alt="">
     <img class="images" style="top:50px;" data-name="2" src="./images/img3.jpg" alt="">
-    <script src="./task1.js"></script>
+    <script src="../js/task1.js"></script>
 </body>
 </html>
