--- a/html/task2.html
+++ b/html/task2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech-task</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Task 2</h1>
     <div id="text">The text</span>
-    <script src="./task2.js"></script>
+    <script src="../js/task2.js"></script>
 </body>
 </html>
