--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Tasks</h1>
-    <a href="./task1.html">Task 1</a>
-    <a href="./task2.html">Task 2</a>
-    <a href="./task3.html">Task 3</a>
+    <a href="./html/task1.html">Task 1</a>
+    <a href="./html/task2.html">Task 2</a>
+    <a href="./html/task3.html">Task 3</a>
+    <a href="./html/task4.html">Task 4</a>
+    <a href="./html/task5.html">Task 5</a>
 </body>
 </html>
