--- a/html/task1.html
+++ b/html/task1.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Task 1</h1>
-    <img class="images" style="top:50px;" data-name="0" src="./images/img1.jpg" alt="">
-    <img class="images" style="top:50px;" data-name="1" src="./images/img2.jpg" alt="">
-    <img class="images" style="top:50px;" data-name="2" src="./images/img3.jpg" alt="">
+    <img class="images" style="top:50px;" data-name="0" src="../images/img1.jpg" alt="">
+    <img class="images" style="top:50px;" data-name="1" src="../images/img2.jpg" alt="">
+    <img class="images" style="top:50px;" data-name="2" src="../images/img3.jpg" alt="">
     <script src="../js/task1.js"></script>
 </body>
 </html>
