--- a/html/task2.html
+++ b/html/task2.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <h1>Task 2</h1>
-    <div id="text">The text</span>
+    <div id="text">
+        <span>T</span>
+        <span>e</span>
+        <span>x</span>
+        <span>t</span>
+        <!-- The text -->
+    </span>
     <script src="../js/task2.js"></script>
 </body>
 </html>
